--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.DealsApp"
         tools:targetApi="31">
         <activity
+            android:name=".Deal_Description"
+            android:exported="false"
+            android:label="@string/title_activity_deal_description"
+            android:theme="@style/Theme.DealsApp" />
+        <activity
             android:name=".C_Registration"
             android:exported="false" />
         <activity
