--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,11 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DealsApp"
         tools:targetApi="31">
-        <activity
-            android:name=".Deal_Description"
-            android:exported="false"
-            android:label="@string/title_activity_deal_description"
-            android:theme="@style/Theme.DealsApp" />
+        
         <activity
             android:name=".C_Registration"
             android:exported="false" />
